--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/525946d639.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrap">
