--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="slideshow-image" style="background-image: url('./images/bg03.jpg')"></div>
         </div>
         <div class="count_wrap">            
-            <h3>COMING SOON</h3>
+            <h3>OPEN COMING SOON</h3>
             <div class="count">
                 <div class="day">
                     <span class="m_text" id="days">35</span>
