--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <div class="slideshow-image" style="background-image: url('./images/bg01.jpg')"></div>
             <div class="slideshow-image" style="background-image: url('./images/bg02.jpg')"></div>
             <div class="slideshow-image" style="background-image: url('./images/bg03.jpg')"></div>
+            <div class="slideshow-image" style="background-image: url('./images/bg04.jpg')"></div>
         </div>
-        <div class="count_wrap">            
-            <h3>OPEN COMING SOON</h3>
+        <div class="count_wrap">         
+            <p>2022.01.30 ~ 02.01</p>           
+            <h3>COMING SOON</h3>    
             <div class="count">
                 <div class="day">
                     <span class="m_text" id="days">35</span>
@@ -50,6 +52,11 @@
             </div>
         </div>
         <div class="link">
+            <p class="size3">
+                <a>
+                    <i class="fas fa-home"></i>
+                </a>
+            </p>
             <p class="size3">
                 <a href="https://twitter.com/DOYOUNGDAN" target="_blank">
                     <i class="fa fa-twitter"></i>
