--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="KO">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>DOYOUNG THEATER, DOYBOX</title>
@@ -53,7 +53,7 @@
         </div>
         <div class="link">
             <p class="size3">
-                <a>
+                <a href="./main/index.html">
                     <i class="fas fa-home"></i>
                 </a>
             </p>
