--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="link">
             <p class="size3">
-                <a href="./main/index.html">
+                <a href="https://doybox.site/main.html">
                     <i class="fas fa-home"></i>
                 </a>
             </p>
