--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
                     <span class="s_text">sec</span>
                 </div>
             </div>
-        </div>
-        <div class="link">
-            <p class="size3">
-                <a href="https://doybox.site/main.html">
-                    <i class="fas fa-home"></i>
-                </a>
-            </p>
-            <p class="size3">
-                <a href="https://twitter.com/DOYOUNGDAN" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                </a>
-            </p>
+            <div class="link">
+                <p class="size3">
+                    <a href="https://doybox.site/main.html">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </p>
+                <!-- <p class="size3">
+                    <a href="https://twitter.com/DOYOUNGDAN" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </p> -->
+            </div>
         </div>
     </div>
 </body>
