--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
         <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
         <title>DOYOUNG THEATER, DOYBOX</title>
-
-        <script src="http//code.jquery.com/jquery-latest.js"></script>
-        <script src="http//code.jquery.com/jquery-latest.min.js"></script>
+        <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
         <!-- icon -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
@@ -33,14 +31,14 @@
                 <div class="outer_wrap">
                     <div class="main_menu">
                         <div class="item theater">
-                            <a>
+                            <a href="https://doybox.site/theater.html">
                                 <p>어느곳에서<br>보고 싶으세요?</p>
                                 <p>극장별 예매</p>
                                 <img src="./images/cinema.png">
                             </a>
                         </div>
                         <div class="item movie">
-                            <a>
+                            <a href="./movie.html">
                                 <p>무엇을<br>보고 싶으세요?</p>
                                 <p>영화별 예매</p>
                                 <img src="./images/movie.png">
@@ -54,9 +52,9 @@
             </div>
             <div class="bottom_menu">
                 <ul>
-                    <li class="home"><span>홈</span></li>
-                    <li class="booking click"><span>예매</span></li>
-                    <li class="twitter"><span>트위터</span></li>
+                    <a><li class="home"><span>홈</span></li></a>
+                    <a><li class="booking click"><span>예매</span></li></a>
+                    <a  href="https://twitter.com/DOYOUNGDAN" target="_blank"><li class="twitter"><span>트위터</span></li></a>
                 </ul>
             </div>
         </div>
