--- a/theater.html
+++ b/theater.html
@@ -23,7 +23,7 @@
         </div>
         <div class="choice_text">
             <p>최대 1개까지 선택할 수 있습니다.</p>
-            <span class="seoul_tag">카페 지금여기 <i class="zmdi zmdi-close"></i></span>
+            <span class="seoul_tag">위밋데얼 <i class="zmdi zmdi-close"></i></span>
             <span class="jeju_tag">티엔미미 <i class="zmdi zmdi-close"></i></span>
         </div>
         <div class="theater_list">
@@ -35,7 +35,7 @@
             </div>
             <div class="cafe_list">
                 <ul>
-                    <li class="seoul_cafe"><a>카페 지금여기</a></li>
+                    <li class="seoul_cafe"><a>위밋데얼</a></li>
                     <li class="jeju_cafe"><a>티엔미미</a></li>
                 </ul>
             </div>
