--- a/theater.html
+++ b/theater.html
@@ -45,10 +45,10 @@
                 <a>선택 완료</a>
             </div> 
             <div class="seoul">
-                <a href="./seoul.html">선택 완료</a>
+                <a href="https://doybox.site/seoul.html">선택 완료</a>
             </div>
             <div class="jeju">
-                <a href="./jeju.html">선택 완료</a>
+                <a href="https://doybox.site/jeju.html">선택 완료</a>
             </div>
         </div>
     </div>
