--- a/jeju.html
+++ b/jeju.html
@@ -57,7 +57,8 @@
                 <div class="cafe_info">
                     <div><i class="zmdi zmdi-info"></i> 제주 티엔미미</div>
                     <p><i class="zmdi zmdi-pin"></i> 제주특별자치도 제주시 연동4길 8</p>
-                    <p><i class="zmdi zmdi-time"></i> OPEN ?? ~ ??</p>  
+                    <p><i class="zmdi zmdi-time"></i> OPEN 10:30 ~ 22:00</p>
+                    <p><i class="zmdi zmdi-walk"></i> 신라면세점 맞은 편 메종글래드 골목</p>
                     <a href="https://www.instagram.com/tnmimi_jeju" target="_blank"><p><i class="zmdi zmdi-instagram"></i> Instagram</p></a>
                     <a href="https://twitter.com/eventcafeinjeju" target="_blank"><p><i class="zmdi zmdi-twitter"></i> Twitter</p></a>
                     <div class="menu_img">
