--- a/theater.html
+++ b/theater.html
@@ -75,6 +75,7 @@
                 $(".seoul_cafe").removeClass("on");
                 $(".seoul_list").removeClass("on");
                 $(".seoul").hide();
+                $(".jeju").hide();
                 $(".btn_before").show();
                 $(".choice_text p").show();
             });
@@ -100,6 +101,7 @@
                 $(".jeju_cafe").removeClass("on");
                 $(".jeju_list").removeClass("on");
                 $(".jeju").hide();
+                $(".seoul").hide();
                 $(".btn_before").show();
                 $(".choice_text p").show();
             });
