--- a/theater.html
+++ b/theater.html
@@ -45,10 +45,14 @@
                 <a>선택 완료</a>
             </div> 
             <div class="seoul">
-                <a href="https://doybox.site/seoul.html">선택 완료</a>
+                <button type="button" onclick="location.href='https://doybox.site/seoul.html'">
+                    <a>선택 완료</a>
+                </button>
             </div>
             <div class="jeju">
-                <a href="https://doybox.site/jeju.html">선택 완료</a>
+                <button type="button" onclick="location.href='https://doybox.site/jeju.html'">
+                    <a>선택 완료</a>
+                </button>
             </div>
         </div>
     </div>
