--- a/theater.html
+++ b/theater.html
@@ -69,6 +69,7 @@
                 $(this).addClass("on");
                 $(".btn_before").hide();
                 $(".seoul").show();
+                $(".jeju").hide();
                 $(".choice_text p").hide();
                 $(".seoul_tag").show();
                 $(".jeju_tag").hide();
@@ -95,6 +96,7 @@
                 $(this).addClass("on");
                 $(".btn_before").hide();
                 $(".jeju").show();
+                $(".seoul").hide();
                 $(".choice_text p").hide();
                 $(".jeju_tag").show();
                 $(".seoul_tag").hide();
