--- a/main.html
+++ b/main.html
@@ -31,11 +31,13 @@
                 <div class="outer_wrap">
                     <div class="main_menu">
                         <div class="item theater">
-                            <a href="https://doybox.site/theater.html">
+                            <button onclick="location.href='https://doybox.site/theater.html'">
+                            <a>
                                 <p>어느곳에서<br>보고 싶으세요?</p>
                                 <p>극장별 예매</p>
                                 <img src="./images/cinema.png">
                             </a>
+                            </button>
                         </div>
                         <div class="item movie">
                             <a href="./movie.html">
