--- a/main.html
+++ b/main.html
@@ -40,11 +40,13 @@
                             </button>
                         </div>
                         <div class="item movie">
-                            <a href="./movie.html">
+                            <button onclick="location.href='https://doybox.site/movie.html'">
+                            <a>
                                 <p>무엇을<br>보고 싶으세요?</p>
                                 <p>영화별 예매</p>
                                 <img src="./images/movie.png">
                             </a>
+                            </button>
                         </div>
                     </div>
                     <div class="ad_banner">
