--- a/jeju.html
+++ b/jeju.html
@@ -62,7 +62,8 @@
                     <a href="https://www.instagram.com/tnmimi_jeju" target="_blank"><p><i class="zmdi zmdi-instagram"></i> Instagram</p></a>
                     <a href="https://twitter.com/eventcafeinjeju" target="_blank"><p><i class="zmdi zmdi-twitter"></i> Twitter</p></a>
                     <div class="menu_img">
-                        메뉴판이미지
+                        <p>MENU</p>
+                        <img src="./images/menu.png">
                     </div>
                 </div>
             </div>
