--- a/seoul.html
+++ b/seoul.html
@@ -24,7 +24,7 @@
         </div>
         <div class="container">
             <div class="inner_wrap">
-                <div class="tag"><span>위밋데얼</span></div>
+                <div class="tag"><span>카페위밋데얼</span></div>
                 <div class="calendar">
                     <div class="month">
                         <span>2022<br><strong>01월</strong></span>
@@ -55,7 +55,7 @@
                     <span class="txt">201석</span>
                 </div>
                 <div class="cafe_info">
-                    <div><i class="zmdi zmdi-info"></i> 홍대 위밋데얼</div>
+                    <div><i class="zmdi zmdi-info"></i> 홍대 카페위밋데얼</div>
                     <p><i class="zmdi zmdi-pin"></i> 서울 마포구 양화로16길 30 한나빌딩 3층</p>
                     <p><i class="zmdi zmdi-time"></i> OPEN 12:00 ~ 20:00</p>
                     <p><i class="zmdi zmdi-walk"></i> 도보 : 홍대입구역9번 출구에서 512m</p>
