--- a/seoul.html
+++ b/seoul.html
@@ -46,7 +46,7 @@
             <div class="outer_wrap">
                 <div class="movie_info">
                     <h3>Dear My Favorite</h3>
-                    <p>aDulescentia : You</p>
+                    <p class="tit">aDulescentia : You</p>
                     <p class="movie_place">도영극장 [D관] <span>201석</span></p>
                     <div class="movie_time">
                         <span class="time">02:01</span>
