--- a/seoul.html
+++ b/seoul.html
@@ -58,7 +58,7 @@
                     <div><i class="zmdi zmdi-info"></i> 홍대 카페위밋데얼</div>
                     <p><i class="zmdi zmdi-pin"></i> 서울 마포구 양화로16길 30 한나빌딩 3층</p>
                     <p><i class="zmdi zmdi-time"></i> OPEN 12:00 ~ 20:00</p>
-                    <p><i class="zmdi zmdi-walk"></i> 도보 : 홍대입구역9번 출구에서 512m</p>
+                    <p><i class="zmdi zmdi-walk"></i> 홍대 에이랜드 맞은편</p>
                     <a href="https://www.instagram.com/cafe.wemeethere" target="_blank"><p><i class="zmdi zmdi-instagram"></i> Instagram</p></a>
                     <a href="https://twitter.com/cafewemeethere" target="_blank"><p><i class="zmdi zmdi-twitter"></i> Twitter</p></a>
                     <p>MENU</p>
