--- a/main.html
+++ b/main.html
@@ -1,66 +1,68 @@
-    <!DOCTYPE html>
-    <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-        <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-        <title>DOYOUNG THEATER, DOYBOX</title>
-        <script type="text/javascript" src="./js/jquery-1.12.4.js"></script>
-        <!-- icon -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <title>DOYOUNG THEATER, DOYBOX</title>
+    <script type="text/javascript" src="./js/jquery-1.12.4.js"></script>
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
 
-        <link rel="stylesheet" href="./css/common.css">
-        <link rel="stylesheet" href="./css/main.css">
-    </head>
-    <body>
-        <div id="wrap">
-            <div class="header">
-                <h1>DOYBOX</h1>
-            </div>
-            <div class="container">
-                <div class="inner_wrap">
-                    <div class="tit">
-                        <h2>My fav, Feb boy!</h2>
-                        <p>#사랑을_노래하는_도영이의_이야기들</p>
-                        <p style="margin-top: 5px;">2022.01.30 - 02.01</p>
-                    </div>
-                </div>
-                <div class="outer_wrap">
-                    <div class="main_menu">
-                        <div class="item theater">
-                            <button onclick="location.href='https://doybox.site/theater.html'">
-                            <a>
-                                <p>어느곳에서<br>보고 싶으세요?</p>
-                                <p>극장별 예매</p>
-                                <img src="./images/cinema.png">
-                            </a>
-                            </button>
-                        </div>
-                        <div class="item movie">
-                            <button onclick="location.href='https://doybox.site/movie.html'">
-                            <a>
-                                <p>무엇을<br>보고 싶으세요?</p>
-                                <p>영화별 예매</p>
-                                <img src="./images/movie.png">
-                            </a>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="ad_banner">
-                        <img src="./images/ad_banner.png">
-                    </div>
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main.css">
+</head>
+<body>
+    <div id="wrap">
+        <div class="header">
+            <h1>DOYBOX</h1>
+        </div>
+        <div class="container">
+            <div class="inner_wrap">
+                <div class="tit">
+                    <h2>My fav, Feb boy!</h2>
+                    <p>#사랑을_노래하는_도영이의_이야기들</p>
+                    <p style="margin-top: 5px;">2022.01.30 - 02.01</p>
                 </div>
             </div>
-            <div class="bottom_menu">
-                <ul>
-                    <a><li class="home"><span>홈</span></li></a>
-                    <a><li class="booking click"><span>예매</span></li></a>
-                    <a  href="https://twitter.com/DOYOUNGDAN" target="_blank"><li class="twitter"><span>트위터</span></li></a>
-                </ul>
+            <div class="outer_wrap">
+                <div class="main_menu">
+                    <div class="item theater">
+                        <button onclick="location.href='https://doybox.site/theater.html'">
+                        <a>
+                            <p>어느곳에서<br>보고 싶으세요?</p>
+                            <p>극장별 예매</p>
+                            <img src="./images/cinema.png">
+                        </a>
+                        </button>
+                    </div>
+                    <div class="item movie">
+                        <button onclick="location.href='./movie.html'">
+                        <a>
+                            <p>무엇을<br>보고 싶으세요?</p>
+                            <p>영화별 예매</p>
+                            <img src="./images/movie.png">
+                        </a>
+                        </button>
+                    </div>
+                </div>
+                <div class="ad_banner">
+                    <img src="./images/ad_banner.png">
+                </div>
             </div>
         </div>
-    </body>
-    </html>
+        <div class="bottom_menu">
+            <ul>
+                <button type="button" onclick="location.href='https://doybox.site'">
+                    <li class="home"><span>홈</span></li>
+                </button>
+                <button type="button" onclick="location.href='https://doybox.site/main.html'"><li class="booking click"><span>예매</span></li></button>
+                <button type="button" onclick="location.href='https://twitter.com/DOYOUNGDAN'"><li class="twitter"><span>트위터</span></li></button>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
