--- a/donation02.html
+++ b/donation02.html
@@ -48,10 +48,10 @@
                     <p>
                         도영이의 27번째 생일을 기념하며,<br>
                         도영이의 이름으로 하트-하트재단 인터내셔널<br>
-                        발달장애인 문화예술지원사업에<br>
+                        발달장애인 문화예술 지원 사업에<br>
                         1,000,000원을 후원할 예정입니다.<br>
-                        적은 보템이지만, 그들의 아름다운 하모니가<br>
-                        세상에 울려퍼지는데 도움이 되었으면 좋겠습니다.<br><br>
+                        적은 보탬이지만, 그들의 아름다운 하모니가<br>
+                        세상에 울려 퍼지는데 도움이 되었으면 좋겠습니다.<br><br>
                         기부증서 추후 업로드 예정
                     </p>
                     <div class="donation_img">
