--- a/donation02.html
+++ b/donation02.html
@@ -24,7 +24,7 @@
         </div>
         <div class="container">
             <div class="inner_wrap">
-                <div class="tag"><span>생리대 기부</span></div>
+                <div class="tag"><span>문화예술지원</span></div>
                 <div class="calendar">
                     <div class="month">
                         <span>2022<br><strong>01월</strong></span>
