--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
                 <button type="button" onclick="location.href='https://doybox.site'">
                     <li class="home"><span>홈</span></li>
                 </button>
-                <button type="button" onclick="location.href='https://doybox.site/main.html'"><li class="booking click"><span>예매</span></li></button>
+                <button type="button" onclick="location.href='https://doybox.site/main.html'"><li class="booking click"><span style="color:#14b9cb !important;">예매</span></li></button>
                 <button type="button" onclick="location.href='https://twitter.com/DOYOUNGDAN'"><li class="twitter"><span>트위터</span></li></button>
             </ul>
         </div>
