--- a/cafe.html
+++ b/cafe.html
@@ -44,19 +44,215 @@
                 </div>
             </div>
             <div class="outer_wrap">
-                <div class="cafe_info">
-                    <p style="text-align: center;">
-                        페이지 준비중.
-                    </p>
+                <div class="cafe_nav">
+                    <div class="cafe_nav_scroll">
+                        <ul>
+                            <li class="on" id="one">일반특전(4)</li>
+                            <li id="two">선착특전(2)</li>
+                            <li id="thr">세트특전(1)</li>
+                            <li id="four">당일특전(2)</li>
+                            <li id="fiv">후기특전(1)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="cafe_info" id="01" style="display: block;">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>컵홀더</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/cup.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>팜플렛</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/paper.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>I형 티켓</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/ticket.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>2월 미니달력</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info" id="02">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>오리지널 티켓 <span class="smalltxt">(21명)</span></p>
+                                <p class="infoday">01월 30일, 01월 31일</p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/original.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>아크릴 키링 <span class="smalltxt">(21명)</span></p>
+                                <p class="infoday">01월 30일, 01월 31일</p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info" id="03">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>포토 티켓 <span class="smalltxt">(세트메뉴 구매자)</span></p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/photo.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info" id="04">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>명언북 <span class="smalltxt">(12명)</span></p>
+                                <p class="infoday"><span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/book.jpg">
+                        </div>
+                    </div>
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>책갈피 <span class="smalltxt">(12명)</span></p>
+                                <p class="infoday"><span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info" id="05">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>유리컵 <span class="smalltxt">(트위터 2명, 방석위카페 2명)</span></p></p>
+                                <p class="infoday">후기 이벤트</p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <script>
-        $(function () {
-            $(".movie_time").on("click", function () {
-                $(".cafe_info").show();
-            });
+        $(function () {       
+            $(".toggleBtn").on("click", function () {
+                $(this).next().toggleClass("show");
+            });       
+            $("#one").on("click", function () {
+                $(this).addClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $("#01").show();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });      
+            $("#two").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $("#02").show();
+                $("#01").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });    
+            $("#thr").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#two").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $("#03").show();
+                $("#01").hide();
+                $("#02").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });  
+            $("#four").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#fiv").removeClass("on");
+                $("#04").show();
+                $("#01").hide();
+                $("#02").hide();
+                $("#03").hide();
+                $("#05").hide();
+            });  
+            $("#fiv").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#05").show();
+                $("#01").hide();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+            });  
         });
     </script>
 </body>
